--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   "eslintConfig": {
     "extends": [
       "react-app",
-      "react-app/jest"
+      "react-app/jest",
+      "prettier"
     ]
   },
   "browserslist": {
@@ -37,7 +38,9 @@
     ]
   },
   "devDependencies": {
+    "eslint-config-prettier": "^8.5.0",
     "mapbox-gl": "^2.11.0",
+    "prettier": "^2.8.0",
     "react-map-gl": "^7.0.19"
   }
 }
