--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "dotenv": "^16.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dotenv": "^0.1.3",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-dotenv && react-scripts start",
+    "build": "react-dotenv && react-scripts build",
+    "test": "react-dotenv && react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -24,6 +25,9 @@
       "react-app/jest",
       "prettier"
     ]
+  },
+  "react-dotenv": {
+    "whitelist": ["MAPBOX_TOKEN"]
   },
   "browserslist": {
     "production": [
